# RubricEval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  FRONTEND_EVALUATION_STATUS.md  LICENSE  Makefile  README.md  REFACTOR_SUMMARY.md  botfather_commands.txt  cv-review-bot.service  doc.html  docker-compose.yml  first_thoughts.md  pytest.ini  requirements.txt  run_bot.sh  start_bot.sh  technical_implementation_plan.md  test_all_components.py  test_all_repos.py  test_dekamond.py  test_final.py  test_final_verification.py  test_fix.py  test_fixed_analysis.py  test_frontend_fixes.py  test_new_format.py  test_simple.py  test_structure_analysis.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  enums.py  exceptions.py
backend/app/db/: __init__.py  base.py  init_db.py  models.py
backend/app/engine/: __init__.py  evidence.py  file_selection.py  grader.py  policy.py  prompts.py  runner.py  schemas.py
backend/app/eval/: __init__.py  cli.py  harness.py
backend/app/events/: __init__.py  bus.py  emitter.py
backend/app/ingestion/: __init__.py  github.py  loader.py  normalize.py  zip.py
backend/app/interfaces/: __init__.py  llm.py
backend/app/jobs/: __init__.py  queue.py  worker.py
backend/app/llm/: __init__.py  (+2 more)
backend/scripts/: eval_repo.py  real_e2e.py  real_provider_test.py  seed_demo.py  verify_submit.py
backend/tests/: conftest.py
(+177 files in other folders)
