[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubric-eval"
version = "0.1.0"
description = "General rubric-driven evaluation engine + API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "aiosqlite>=0.19,<1.0",
    "greenlet>=3.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "python-multipart>=0.0.9",
    "litellm>=1.40,<2.0",
    "gitpython>=3.1,<4.0",
    "tiktoken>=0.5",
    "cryptography>=42",
    "httpx>=0.27",
    "sse-starlette>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "anyio>=4.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
